   and Guillaume Munch-Maccagnoni).

- #12789: Restore caml_unregister_frametable from OCaml 4
  (Frédéric Recoules, review by Gabriel Scherer)

- #13003: new, more consistent names for array-creation C functions
  (Gabriel Scherer, review by Olivier Nicole)

- #13086: Avoid spurious major GC slices.
  (Damien Doligez, report by Stephen Dolan, review by Gabriel Scherer
   and Stephen Dolan)

### Code generation and optimizations:

- #13014: Enable compile-time option -function-sections on all previously
  unsupported native backends (POWER, riscv64 and s390x)
  (Miod Vallat, review by Nicolás Ojeda Bär)

- #7241, #12555: fix a soundness bug in the pattern-matching compiler
  when side-effects mutate the scrutinee during matching.
  Note that #7241 is not fully fixed yet, see the issue for the
  current status.
  (Gabriel Scherer, review by Nick Roberts)

- #13079: Save and restore frame pointer across Iextcall on ARM64
  (Tim McGilchrist, review by KC Sivaramakrishnan and Miod Vallat)

### Standard library:

- #12133: Expose support for printing substrings in Format
  (Florian Angeletti, review by Daniel Bünzli, Gabriel Scherer
   and Nicolás Ojeda Bär)

- #12869: Add List.take, List.drop, List.take_while and List.drop_while
  (Kate Deplaix and Oscar Butler-Aldridge review by Nicolás Ojeda Bär,
   Craig Ferguson and Gabriel Scherer)

- #13047: Add Sys.poll_actions to (only) run pending runtime actions.
  (Nick Barnes, review by Gabriel Scherer, Guillaume Munch-Maccagnoni, and
  Vincent Laviron)

### Other libraries:

### Tools:

- #12904: Run the testsuite with ThreadSanitizer on a PR when label
  `run-thread-sanitizer` is added
  (Olivier Nicole, suggested by Sébastien Hinderer and David Allsopp, review by
   Gabriel Scherer)

### Toplevel:

- #12891: Improved styling for initial prompt
  (Florian Angeletti, review by Gabriel Scherer)

- #13053: Improved display of builtin types such as `_ list` when aliased.
  (Samuel Vivien, review by Florian Angeletti)
